# netaichi

./: .env.example  .gitignore  README.md  main.py  marge.py  pyproject.toml  setup_scheduled_task.ps1
.github/workflows/: availability-cities.yml  availability-eaichi.yml  availability-nagoya.yml  availability-nisshin.yml  availability-soon.yml  availability.yml  daily.yml  test.yml
bot/: __init__.py  db_init.py  lottery.py  reserve.py  test.py
browser/: __init__.py  chrome.py  netaichi.py
browser/jsp/: __init__.py  base.py  data.py  get.py  go.py  message.py  select.py  selecter.py
config/: __init__.py  gss.py  netaichi.py  selenium.py
database/: netaichi.py
helper/: __init__.py  deco.py  func.py  gss.py  log.py
netaichi/: __main__.py  config.py
netaichi/browser/: __init__.py  chrome.py  eaichi.py  nagoya.py  netaichi.py  tennisbear.py
netaichi/browser/pages/: base.py  data.py  get.py  go.py  select.py  selector.py
netaichi/db/: __init__.py  models.py  netaichi.py
netaichi/helper/: __init__.py  func.py  gss.py  log.py
netaichi/notify/: __init__.py  discord.py
netaichi/services/: availability.py  bear.py  cancel.py  db_init.py  lottery.py  prune.py  reserve.py
refa/: add.py  main.py
rules/: availability_rules.yaml  bear_rules.yaml  cancel_rules.yaml  lottery_rules.yaml  prune_rules.yaml
tests/: test_availability.py  test_bear.py  test_cancel.py  test_gss.py  test_lottery_dedup.py  test_lottery_rules.py  test_nagoya.py  test_prune.py
