[tool.poetry]
name = "netaichi"
version = "0.1.0"
description = ""
authors = ["oguri <oguri.1729@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.25.0"
anti-useragent = "^1.0.10"
bs4 = "^0.0.2"
lxml = "^5.3.0"
html5lib = "^1.1"
sqlmodel = "^0.0.22"
gspread-dataframe = "^4.0.0"
oauth2client = "^4.1.3"
jpholiday = "^0.1.10"


[tool.poetry.group.dev.dependencies]
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
